# CPP-ND-Game-Of-Life

./: .gitignore  CMakeLists.txt  README.md
include/: Cell.h  GameOfLife.h  Grid2DRenderer.h  SimpleConsoleGrid2DRenderer.h  SimulationHooks.h  Utils.h
include/algo/: GameOfLife.h
include/hooks/: DefaultSimulationHooks.h
include/model/: Grid2D.h
include/rendering/: Grid2DRenderer.h  SimpleConsoleGrid2DRenderer.h
include/supplier/: CellStateSupplier.h  RandomCellStateSupplier.h
src/: Cell.cpp  DefaultSimulationHooks.cpp  GameOfLife.cpp  Grid2D.cpp  SimpleConsoleGrid2DRenderer.cpp  SimulationHooks.cpp  Utils.cpp  main.cpp
src/algo/: GameOfLife.cpp
src/hooks/: DefaultSimulationHooks.cpp
src/model/: Cell.cpp  Grid2D.cpp
src/rendering/: SimpleConsoleGrid2DRenderer.cpp
src/supplier/: RandomCellStateSupplier.cpp
src/utils/: Utils.cpp
test/: game_of_life_test.cpp  grid_2D_test.cpp  simple_console_grid_2d_renderer_test.cpp  utils_test.cpp
